[package]
name = "mb85rc"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.3"
rand = "0.8.5"

[lib]
name = "mb85rc"

[[example]]
name = "linux-rpi-test"
